Fixing menu toggle visibility

--- a/style.css
+++ b/style.css
@@ -615,15 +615,15 @@ a.btn.skip-link {
 a.btn.skip-link {
 	font-size: 1.4rem;
 }
-button:hover:not(button.pmpro_btn:hover):not(button.pmpro_btn-plain:hover),
+button:hover:not(button.pmpro_btn:hover):not(button.pmpro_btn-plain:hover):not(button.menu-toggle:hover),
 input[type=button]:hover,
 input[type=reset]:hover,
 input[type=submit]:hover,
-button:focus:not(button.pmpro_btn:focus):not(button.pmpro_btn-plain:focus),
+button:focus:not(button.pmpro_btn:focus):not(button.pmpro_btn-plain:focus):not(button.menu-toggle:focus),
 input[type=button]:focus,
 input[type=reset]:focus,
 input[type=submit]:focus,
-button:active:not(button.pmpro_btn:active):not(button.pmpro_btn-plain:active),
+button:active:not(button.pmpro_btn:active):not(button.pmpro_btn-plain:active):not(button.menu-toggle:active),
 input[type=button]:active,
 input[type=reset]:active,
 input[type=submit]:active,
